[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/Inventory/sprites/inner_panel.png" type="Texture" id=1]
[ext_resource path="res://UI/Inventory/sprites/title.png" type="Texture" id=2]
[ext_resource path="res://Fonts/PixelFont_SM.tres" type="DynamicFont" id=3]
[ext_resource path="res://UI/Inventory/item_info.gd" type="Script" id=4]

[node name="item_info" type="NinePatchRect"]
margin_right = 93.0
margin_bottom = 16.0
texture = ExtResource( 1 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
script = ExtResource( 4 )
item_name = NodePath("title/item_name")

[node name="title" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -33.0
margin_top = -13.0
margin_right = 33.0
margin_bottom = 1.0
texture = ExtResource( 2 )
patch_margin_left = 6
patch_margin_top = 4
patch_margin_right = 6
patch_margin_bottom = 2

[node name="item_name" type="Label" parent="title"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_bottom = 1.0
custom_colors/font_color = Color( 0.313726, 0.176471, 0.223529, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Item"
align = 1
valign = 1

[node name="item_info_container" type="VBoxContainer" parent="."]
margin_left = 6.0
margin_top = 6.0
margin_right = 87.0
margin_bottom = 13.0

[node name="item_desc_Label" type="RichTextLabel" parent="item_info_container"]
margin_right = 81.0
margin_bottom = 7.0
custom_colors/default_color = Color( 0.745098, 0.486275, 0.423529, 1 )
custom_fonts/normal_font = ExtResource( 3 )
text = "Item Description"
fit_content_height = true
scroll_active = false

[node name="Damage" type="Label" parent="item_info_container"]
margin_top = 11.0
margin_right = 81.0
margin_bottom = 17.0
custom_colors/font_color = Color( 0.886275, 0.796078, 0.192157, 1 )
custom_fonts/font = ExtResource( 3 )
text = "+5 : Damage"

[node name="IncreaseHealth" type="Label" parent="item_info_container"]
margin_top = 21.0
margin_right = 81.0
margin_bottom = 27.0
custom_colors/font_color = Color( 0.772549, 0.290196, 0.290196, 1 )
custom_fonts/font = ExtResource( 3 )
text = "+5 HEALTH"

[node name="MaxHealth" type="Label" parent="item_info_container"]
margin_top = 31.0
margin_right = 81.0
margin_bottom = 37.0
custom_colors/font_color = Color( 0.772549, 0.290196, 0.290196, 1 )
custom_fonts/font = ExtResource( 3 )
text = "+5 : Max Health"

[node name="RegHealth" type="Label" parent="item_info_container"]
margin_top = 41.0
margin_right = 81.0
margin_bottom = 47.0
custom_colors/font_color = Color( 0.772549, 0.290196, 0.290196, 1 )
custom_fonts/font = ExtResource( 3 )
text = "+5 : Max Regen"

[node name="IncreaseMana" type="Label" parent="item_info_container"]
margin_top = 51.0
margin_right = 81.0
margin_bottom = 57.0
custom_colors/font_color = Color( 0.419608, 0.670588, 0.776471, 1 )
custom_fonts/font = ExtResource( 3 )
text = "+5 MANA"

[node name="MaxMana" type="Label" parent="item_info_container"]
margin_top = 61.0
margin_right = 81.0
margin_bottom = 67.0
custom_colors/font_color = Color( 0.419608, 0.670588, 0.776471, 1 )
custom_fonts/font = ExtResource( 3 )
text = "+5 : Max Mana"

[node name="RegMana" type="Label" parent="item_info_container"]
margin_top = 71.0
margin_right = 81.0
margin_bottom = 77.0
custom_colors/font_color = Color( 0.419608, 0.670588, 0.776471, 1 )
custom_fonts/font = ExtResource( 3 )
text = "+5 : Mana Regen"

[node name="CostMana" type="Label" parent="item_info_container"]
margin_top = 81.0
margin_right = 81.0
margin_bottom = 87.0
custom_colors/font_color = Color( 0.419608, 0.670588, 0.776471, 1 )
custom_fonts/font = ExtResource( 3 )
text = "+5 : Mana Cost"

[node name="IncreaseStamina" type="Label" parent="item_info_container"]
margin_top = 91.0
margin_right = 81.0
margin_bottom = 97.0
custom_colors/font_color = Color( 0.529412, 0.776471, 0.419608, 1 )
custom_fonts/font = ExtResource( 3 )
text = "+5 STAMINA"

[node name="MaxStamina" type="Label" parent="item_info_container"]
margin_top = 101.0
margin_right = 81.0
margin_bottom = 107.0
custom_colors/font_color = Color( 0.529412, 0.776471, 0.419608, 1 )
custom_fonts/font = ExtResource( 3 )
text = "+5 : Max Stamina"

[node name="RegStamina" type="Label" parent="item_info_container"]
margin_top = 111.0
margin_right = 81.0
margin_bottom = 117.0
custom_colors/font_color = Color( 0.529412, 0.776471, 0.419608, 1 )
custom_fonts/font = ExtResource( 3 )
text = "+5 : Stamina Regen"

[node name="CostStamina" type="Label" parent="item_info_container"]
margin_top = 121.0
margin_right = 81.0
margin_bottom = 127.0
custom_colors/font_color = Color( 0.529412, 0.776471, 0.419608, 1 )
custom_fonts/font = ExtResource( 3 )
text = "+5 : Stamina Cost"
